-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.44 2007-07-30 20:25:38 guru Exp $
-----------------------------------------------------------------------------------------

2007-07-30	pwessel
	* psxy.c:		For -Sb|B, clip bars extending outside -R (unless -N is on)
	* psxyz.c		Same
	
2007-07-18	remko
	* meca/utilmeca.c:	Make sure that checks on floating point numbers work well, even
				in case of small round off errors. Thanks to Peter Lombard.

2007-07-17	pwessel
	* grdedit.c:		Disallow -T for Surfer grids since they dont support two
				kinds of registration.
				
2007-07-16	pwessel
	* grd2xyz.c:		Bug fix (Windows only): Did not switch to binary mode when
				-Z specified binary output.
2007-07-11	remko
	* grd2cpt.c:		Bug fix: -E flag did not work unless -T was used.
	* gmt_init.c:		Parsing of psxy's -Sf incorrecly scaled a count to inches.

2007-07-10	wsmith
	* img2mercgrd.c:	Fixed &&/|| logic in lat bounds check when -D set.
	
2007-07-09	pwessel
	* misc/gmtdigitize.c:	Wrong coordinates used to calculate rms misfit
	
2007-07-08	pwessel
	* gmt_init.c:		Suffices h|+|- in -J were mistaken for units
	* gmt_io.c:		Blank lines were not recognized under cygwin/SFU
	 
2007-07-06	pwessel
	* gmt_stat.c:		Added Digamma (Psi), P_nu and Q_nu Legendre functions (complex nu)
	* g{mt,rd}math.c:	Added PSI, PV, QV, COT, COTD, ACOT, SEC, SECD, ASEC, CSC, CSCD, ACSC

2007-06-29	remko
	* makefile.guru:	New system to make manpages
	* guru/{pdf,web}man.sh:	---"---
	* www/gmt/gmt_{man,suppl,services}.html:	No longer made from shell scripts
				or makefiles. Now part of CVS.

2007-06-28	pwessel
	* src/gredit.c:		-N did not take into account -fg if given
	* src/gmt_map.c:	Great circle intersection did not select correct vector sign so
				points 180 degrees from a line could pass as close in gmtselect

2007-06-28	remko
	* src/ps2raster.c:	Save temporary script with unique file name (<psfile>_tmp.bat) so